# othello-sensei

./: .gitignore  .gitmodules  .metadata  CONTRIBUTING.md  README.md  Todo.txt  ffigen_cpu_adapter.yaml  firebase.json  flutter_launcher_icons.yaml  gradle.properties  privacy_policy.md  pubspec.yaml  settings.gradle
app/src/main/cpp/: CMakeLists.txt  bitpattern.h  bitpattern_test.cpp  board.cpp  constants.h  evaluator_last_moves.cpp  evaluator_last_moves.h  evaluator_last_moves_profile.cpp  evaluator_last_moves_test.cpp  get_flip.cpp  hash_map.h  hash_map_test.cpp  random.h  random_test.cpp  stable.cpp  stable.h
app/src/main/cpp/analyzers/: CMakeLists.txt  collect_examples.cpp  endgame_ffo.cpp  endgame_ffo.h  endgame_ffo_main.cpp  evaluate_thor_main.cpp  last_moves.cpp  thor.cpp  thor_endgame.cpp  thor_main.cpp
app/src/main/cpp/board/: CMakeLists.txt  bitpattern.cpp  bitpattern.h  bitpattern_test.cpp  board.cpp  board.h  board_test.cpp  get_flip.cpp  get_flip.h  get_flip_profile.cpp  get_flip_test.cpp  get_moves.cpp  get_moves.h  get_moves_test.cpp  stable.cpp  stable.h  stable_test.cpp
app/src/main/cpp/book/: CMakeLists.txt  book.cpp  book.h  book_test.cpp  book_tree_node.cpp  book_tree_node.h  book_tree_node_test.cpp  expand_book_main.cpp  expand_book_thor_main.cpp  merge_books_main.cpp  position_to_data.cpp  position_to_data.h  position_to_data_test.cpp  serializable_boolean_vector.cpp  serializable_boolean_vector.h  serializable_boolean_vector_test.cpp  test_utils.h  value_file.cpp  value_file.h  value_file_test.cpp
app/src/main/cpp/estimators/: CMakeLists.txt  endgame_time.h  endgame_time_test.cpp  gaussian.cpp  gaussian.h  gaussian_test.cpp  win_probability.h  win_probability_test.cpp
app/src/main/cpp/evaluatealphabeta/: CMakeLists.txt  evaluator_alpha_beta.cpp  evaluator_alpha_beta.h  evaluator_alpha_beta_test.cpp  evaluator_last_moves.cpp  evaluator_last_moves.h  evaluator_last_moves_test.cpp  test_evaluator.h  test_evaluator_test.cpp
app/src/main/cpp/evaluatedepthone/: CMakeLists.txt  evaluator.cpp  evaluator.h  evaluator_depth_one_base.h  feature.h  (+16 more)
engine/: CMakeLists.txt  exports.def
engine/analyzers/: CMakeLists.txt  collect_examples.cpp  endgame_ffo.h  endgame_ffo_main.cpp  evaluate_cli_main.cpp  last_moves.cpp  position_to_thor_scores_main.cpp  test_memory_main.cpp  thor_endgame.cpp
engine/board/: CMakeLists.txt  bitpattern.cpp  bitpattern.h  board.cpp  board.h  board_test.cpp  get_flip.cpp  get_flip.h  get_flip_profile.cpp  get_flip_test.cpp  get_moves.cpp  get_moves.h  get_moves_test.cpp  sequence.cpp  sequence.h  sequence_test.cpp  stable.cpp  stable.h  stable_test.cpp
engine/board_optimized/: CMakeLists.txt  board_optimized.cpp  board_optimized.h  board_optimized_flip_profile.cpp  board_optimized_test.cpp  compressed_flip.h  compressed_flip_test.cpp  flip_optimized.h  flip_optimized_test.cpp  play_move.h  play_move_test.cpp
engine/book/: CMakeLists.txt  book.cpp  book.h  book_test.cpp  book_tree_node.cpp  book_tree_node.h  book_tree_node_test.cpp  book_visitor.h  book_visitor_stats_main.cpp  book_visitor_test.cpp  expand_book_main.cpp  expand_book_thor_main.cpp  merge_books_main.cpp  test_utils.cpp  test_utils.h  value_file.cpp  value_file.h  value_file_test.cpp
engine/book_visitor/: CMakeLists.txt  book_visitor_stats_main.cpp  book_visitor_test_utils.h  expand_book_auto_main.cpp  expand_book_main.cpp  expand_book_thor_main.cpp  merge_books_main.cpp  merger.cpp  merger.h  merger_test.cpp  reduce_book_main.cpp  visitor.cpp  visitor.h  visitor_test.cpp
engine/estimators/: CMakeLists.txt  endgame_time.h  endgame_time_test.cpp  win_probability.cpp  win_probability.h  win_probability_test.cpp
engine/evaluatealphabeta/: CMakeLists.txt  evaluator_alpha_beta.cpp  evaluator_alpha_beta.h  evaluator_last_moves.cpp  evaluator_last_moves.h  test_evaluator.cpp  test_evaluator.h
engine/evaluatealphabeta_optimized/: CMakeLists.txt  evaluator_alpha_beta_optimized.h  evaluator_alpha_beta_optimized_test.cpp  evaluator_alpha_beta_profile.cpp
engine/evaluatedepthone/: CMakeLists.txt  evaluator_depth_one_base.h  pattern.cpp  pattern.h  pattern_evaluator.cpp  pattern_evaluator.h  pattern_evaluator_test.cpp  pattern_test.cpp  test_evaluator_depth_one.h  test_evaluator_depth_one_test.cpp  train_pattern_evaluator.cpp  train_pattern_evaluator.h  train_pattern_evaluator_main.cpp  train_pattern_evaluator_test.cpp
engine/evaluatederivative/: CMakeLists.txt  evaluation.h  evaluation_test.cpp  evaluator_derivative.cpp  evaluator_derivative.h  evaluator_derivative_test.cpp  prob_combiners.h  prob_combiners_test.cpp  tree_node.cpp  tree_node.h  tree_node_test.cpp
engine/hashmap/: CMakeLists.txt  hash_map.cpp  hash_map.h  hash_map_test.cpp
engine/jni/: CMakeLists.txt  jni.cpp
engine/main/: CMakeLists.txt  bindings.cpp  bindings.h  engine.cpp  engine.h  exports.def  main.cpp  main.h  state.cpp  state.h  ui.cpp  ui.h
engine/playagainstsensei/: CMakeLists.txt  move_selector.cpp  move_selector.h  move_selector_e2e_test.cpp  move_selector_test.cpp
engine/savegame/: CMakeLists.txt  game_to_save.cpp  game_to_save.h  game_to_save_test.cpp  saved_game_list.cpp  saved_game_list.h  saved_game_list_test.cpp
engine/thor/: CMakeLists.txt  fix_xot_source.cpp  fix_xot_source.h  fix_xot_source_test.cpp  game.cpp  game.h  game_test.cpp  generic_source.cpp  generic_source.h  source.cpp  source.h  source_test.cpp  thor.cpp  thor.h  thor_analyze_errors_main.cpp  thor_create_extra_files.cpp  thor_profile.cpp  thor_test.cpp  thor_test_utils.h  thor_to_saved_games_main.cpp
engine/utils/: CMakeLists.txt  constants.h  cpu_adapter.cpp  cpu_adapter.h  exports.def  files.cpp  files.h  functions.h  load_training_set.cpp  load_training_set.h  misc.cpp  misc.h  misc_test.cpp  parse_flags.cpp  parse_flags.h  parse_flags_test.cpp  random.h  random_test.cpp  serializable_boolean_vector.cpp  serializable_boolean_vector.h  serializable_boolean_vector_test.cpp  types.cpp  types.h
engine/wasm/: CMakeLists.txt  wasm_bindings.cpp
engine/xot/: CMakeLists.txt  xot.cpp  xot.h  xot_test.cpp
(+499 files in other folders)
